--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li class="item-lista nav-item"><a href="#" class="nav-link">Home</a></li>
                         <li class="item-lista nav-item"><a href="#about-main-text" class="nav-link">Sobre Nós</a></li>
                         <li class="item-lista nav-item"><a href="cardapio.html" class="nav-link">Cardapio</a></li>
-                        <li class="item-lista nav-item"><a href="#enderecos" class="nav-link">Localização</a></li>
+                        <li class="item-lista nav-item"><a href="#reserva" class="nav-link">Localização</a></li>
                     </ul>
                 </nav>
                 <div class="menu-lateral">
@@ -61,7 +61,7 @@
                     Brasil, uma experiência que vai além do
                     paladar.</h3>
                 <div class="btns">
-                    <a href="#">Agende uma reserva</a>
+                    <a href="#" id="reserva">Agende uma reserva</a>
 
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 <h2 class="conteudo-texto" data-aos="fade-up">Descubra uma culinária de excelência, elaborada por nossos
                     premiados chefs
                 </h2>
-                <p class="conteudo-texto" data-aos="fade-up" data-aos-delay="100">
+                <p class="conteudo-texto2" data-aos="fade-up" data-aos-delay="100">
                     No Oishii Sushi, acreditamos que cada prato é uma expressão de arte e dedicação. Nossos chefs, não
                     apenas dominam a
                     técnica milenar japonesa, mas infundem paixão e inovação em cada criação, garantindo que sua
@@ -184,7 +184,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#about-main-text">Sobre Nós</a></li>
                     <li><a href="cardapio.html">Cardápio</a></li>
-                    <li><a href="#enderecos">Localização</a></li>
+                    <li><a href="#reserva">Localização</a></li>
                 </ul>
             </div>
 
